# vasak-impulse-daemon

./: .gitignore  99-vasak-impulse-daemon.rules  Cargo.toml  INSTALL.md  README.md  vasak-impulse-daemon.service
config/: shortcuts.example.json
src/: bindings.rs  config.rs  executor.rs  keyboard.rs  lib.rs  main.rs  watcher.rs
